rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_str__tests__ascii_keep_right.snap
---
source: crates/rax/src/text/rules/until_str.rs
expression: result
---
Ok(
    (
        "abc",
        "-def",
    ),
)
